ros2_ws/log/build_2024-10-25_22-51-12/controller/stderr.log
  File "/home/DATA/Test/DogRobot/ros2_ws/install/controller/lib/python3.12/site-packages/controller/quadrupedRobot.py", line 209
    xGamePadOld = 0, yGamePadOld = 0, xGamePadNew = xGamePadOld, yGamePadNew= yGamePadOld
    ^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

